# rustmatrix

./: .gitignore  .readthedocs.yaml  CITATION.cff  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
benches/: bench_vs_pytmatrix.py
docs/: changelog.md  conf.py  contributing.md  conventions.md  index.md  install.md  quickstart.md  references.bib
docs/_static/: custom.css
docs/api/: hd_mix.md  index.md  orientation.md  psd.md  quadrature.md  radar.md  refractive.md  rustmatrix.md  scatter.md  scatterer.md  spectra.beam.md  spectra.md  tmatrix_aux.md
docs/background/: beam.md  polarimetry.md  psd.md  spectra.md  tmatrix.md
docs/rust-api/: index.md
docs/tutorials/: 01_sphere_mie.ipynb  index.md
examples/: 06_hd_mix.ipynb  06_hd_mix.py  07_doppler_spectrum_rain.ipynb  07_doppler_spectrum_rain.py  08_spectral_polarimetry_rain_ice.ipynb  08_spectral_polarimetry_rain_ice.py  09_zhu_2023_particle_inertia.ipynb  10_slw_vs_snow.ipynb  10_slw_vs_snow.py  11_honeyager_hydrometeor_classes.ipynb  11_honeyager_hydrometeor_classes.py  13_wind_turbulence_sensitivity.ipynb  13_wind_turbulence_sensitivity.py  14_beam_pattern_scene.ipynb  14_beam_pattern_scene.py  _build_notebooks.py
python/rupytmatrix/: __init__.py  _core.pyi  orientation.py  psd.py  quadrature.py  scatterer.py
python/rustmatrix/: __init__.py  hd_mix.py  scatterer.py  spectra.py
python/rustmatrix/spectra/: __init__.py  beam.py
src/: lib.rs  pybindings.rs
tests/: test_hd_mix.py  test_orientation.py  test_parity_pytmatrix.py  test_psd.py  test_spectra.py  test_spectra_beam.py  test_threading.py
