[package]
name = "rustmatrix"
version = "2.1.0"
edition = "2021"
authors = ["Stephen Nesbitt <snesbitt@illinois.edu>"]
license = "MIT"
description = "Rust-backed T-matrix scattering for nonspherical particles (port of pytmatrix)"
repository = "https://github.com/swnesbitt/rustmatrix"
readme = "README.md"
keywords = ["scattering", "t-matrix", "radar", "electromagnetic", "mie"]
categories = ["science", "mathematics"]

[lib]
name = "rustmatrix"
# `cdylib` is needed to produce the Python extension;
# `rlib` lets `cargo test` run the tests in the library crate.
crate-type = ["cdylib", "rlib"]

[dependencies]
num-complex = "0.4"
ndarray = "0.16"
nalgebra = { version = "0.33", features = ["std"] }
numpy = "0.22"
rayon = "1.10"

[dependencies.pyo3]
version = "0.22"
features = ["extension-module", "abi3-py38", "num-complex"]

[dev-dependencies]
approx = "0.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[package.metadata.docs.rs]
all-features = false
rustdoc-args = ["--cfg", "docsrs"]
