[package]
name = "rustmatrix"
version = "2.1.1"
edition = "2021"
authors = ["Stephen Nesbitt <snesbitt@illinois.edu>"]
license = "MIT"
description = "Rust-backed T-matrix scattering for nonspherical particles (port of pytmatrix)"
repository = "https://github.com/swnesbitt/rustmatrix"
readme = "README.md"
keywords = ["scattering", "t-matrix", "radar", "electromagnetic", "mie"]
categories = ["science", "mathematics"]

[lib]
name = "rustmatrix"
# `cdylib` is needed to produce the Python extension;
# `rlib` lets `cargo test` run the tests in the library crate.
crate-type = ["cdylib", "rlib"]

[dependencies]
num-complex = "0.4"
ndarray = "0.16"
nalgebra = { version = "0.33", features = ["std"] }
numpy = "0.22"
rayon = "1.10"

[dependencies.pyo3]
version = "0.22"
# `extension-module` is deliberately NOT in default features: it tells
# pyo3 to skip linking libpython, which breaks `cargo publish` and
# docs.rs. Enable it via the `extension-module` feature below — the
# maturin build in pyproject.toml does exactly that.
features = ["abi3-py38", "num-complex"]

[features]
extension-module = ["pyo3/extension-module"]

[dev-dependencies]
approx = "0.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[package.metadata.docs.rs]
all-features = false
rustdoc-args = ["--cfg", "docsrs"]
