[package]
name = "rustmatrix"
version = "2.2.0"
edition = "2021"
authors = ["Stephen Nesbitt <snesbitt@illinois.edu>"]
license = "MIT"
description = "Rust-backed T-matrix scattering for nonspherical particles (port of pytmatrix)"
repository = "https://github.com/swnesbitt/rustmatrix"
readme = "README.md"
keywords = ["scattering", "t-matrix", "radar", "electromagnetic", "mie"]
categories = ["science", "mathematics"]

[lib]
name = "rustmatrix"
# `cdylib` is needed to produce the Python extension;
# `rlib` lets `cargo test` run the tests in the library crate.
crate-type = ["cdylib", "rlib"]

[dependencies]
num-complex = "0.4"
# Must stay within the range the `numpy` crate accepts (currently
# ">=0.15, <=0.17") so both resolve to ONE ndarray and numpy's
# IntoPyArray impls apply to our arrays.
ndarray = ">=0.16, <=0.17"
nalgebra = { version = "0.33", features = ["std"] }
numpy = "0.28"
rayon = "1.10"

[dependencies.pyo3]
version = "0.28"
# `extension-module` is deliberately NOT in default features: it tells
# pyo3 to skip linking libpython, which breaks `cargo publish` and
# docs.rs. Enable it via the `extension-module` feature below — the
# maturin build in pyproject.toml does exactly that.
#
# `abi3-py39` produces one stable-ABI wheel per platform for GIL-enabled
# CPython >= 3.9. Free-threaded CPython (3.14t+) has no limited API, so
# pyo3 ignores abi3 there and version-specific cp314t wheels are built
# in CI instead.
features = ["abi3-py39", "num-complex"]

[features]
extension-module = ["pyo3/extension-module"]

[dev-dependencies]
approx = "0.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[package.metadata.docs.rs]
all-features = false
rustdoc-args = ["--cfg", "docsrs"]
